GearsetPOC/force-app/main/default/objects/ES_System__c/ES_System__c.object-meta.xml
<CustomObject>
    <description>Inventory of all the Eurostar systems, with flagged critical systems.</description>
    <label>ES System</label>
    <nameField>
        <label>System Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ES Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>