GearsetPOC/force-app/main/default/objects/ES_System__c/fields/Backup_Recovery_Plan__c.field-meta.xml
<CustomField>
    <fullName>Backup_Recovery_Plan__c</fullName>
    <label>Backup &amp; Recovery Plan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>