GearsetPOC/force-app/main/default/objects/ES_System__c/fields/Business_Areas__c.field-meta.xml
<CustomField>
    <fullName>Business_Areas__c</fullName>
    <label>Business Areas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business Continuity Team</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Company Wide</fullName>
            </value>
            <value>
                <fullName>CRE Manager</fullName>
            </value>
            <value>
                <fullName>Customer Services</fullName>
            </value>
            <value>
                <fullName>ECC</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>IS</fullName>
            </value>
            <value>
                <fullName>Operations Control</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>