GearsetPOC/force-app/main/default/objects/ES_System__c/fields/Business_Lead__c.field-meta.xml
<CustomField>
    <fullName>Business_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Systems</relationshipName>
    <type>Lookup</type>
</CustomField>