GearsetPOC/force-app/main/default/objects/ES_System__c/fields/Business_Lead_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Business_Lead_Job_Title__c</fullName>
    <formula>Business_Lead__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Lead Job Title</label>
    <type>Text</type>
</CustomField>