GearsetPOC/force-app/main/default/objects/ES_System__c/fields/IS_Team_Responsible__c.field-meta.xml
<CustomField>
    <fullName>IS_Team_Responsible__c</fullName>
    <label>IS Team Responsible</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Corp &amp; Op Systems</fullName>
            </value>
            <value>
                <fullName>Customer Systems</fullName>
            </value>
            <value>
                <fullName>InfoSec Team</fullName>
            </value>
            <value>
                <fullName>Infrastructure Services</fullName>
            </value>
            <value>
                <fullName>Sales Systems</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>