GearsetPOC/force-app/main/default/objects/ES_System__c/fields/Key_Users__c.field-meta.xml
<CustomField>
    <fullName>Key_Users__c</fullName>
    <inlineHelpText>Describe who is or will be using the system</inlineHelpText>
    <label>Key Users</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>