GearsetPOC/force-app/main/default/objects/ES_System__c/fields/Number_of_Users__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Users__c</fullName>
    <inlineHelpText>Estimated number of users using the system</inlineHelpText>
    <label>Number of Users</label>
    <length>10</length>
    <type>Text</type>
</CustomField>