GearsetPOC/force-app/main/default/objects/ES_System__c/fields/Owner_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Owner_Job_Title__c</fullName>
    <formula>Owner:User.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Job Title</label>
    <type>Text</type>
</CustomField>