GearsetPOC/force-app/main/default/objects/ES_System__c/fields/Salesforce_Apex_Code_Justification__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Apex_Code_Justification__c</fullName>
    <inlineHelpText>If any Classes or Triggers have been written, justify why the out-of-the-box functionalities haven&#39;t been used instead</inlineHelpText>
    <label>Salesforce Apex Code Justification</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>