GearsetPOC/force-app/main/default/objects/ES_System__c/fields/Salesforce_Components__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Components__c</fullName>
    <inlineHelpText>What will the packaged change set (and/or reconfigurations) are intended to bring/change in Production in terms of Salesforce Components (New objects? New classes? Changes to any components?)</inlineHelpText>
    <label>Salesforce Components</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>