GearsetPOC/force-app/main/default/objects/ES_System__c/fields/Salesforce_Licences__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Licences__c</fullName>
    <inlineHelpText>A recap of the licences that will be used in Production. Specify clearly if any additional are required, and how they will be provided (who will pay for them).</inlineHelpText>
    <label>Salesforce Licences</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>