GearsetPOC/force-app/main/default/objects/ES_System__c/fields/Salesforce_MTP_Process__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_MTP_Process__c</fullName>
    <inlineHelpText>Full description of the MTP (Move To Production) step by step. It is always advised to deploy on the DEPLOY sandbox (refreshed frequently), using &quot;Run Local Tests&quot; to simulate a Production deployment, and perform some UAT there.</inlineHelpText>
    <label>Salesforce MTP Process</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>