GearsetPOC/force-app/main/default/objects/ES_System__c/fields/Salesforce_Naming_Convention__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Naming_Convention__c</fullName>
    <inlineHelpText>All Salesforce Components (especially Apex classes, Visualforce pages...) should start with a keyword and an underscorde. For example: OnlineComps_

Components not respecting naming conventions will be DELETED from Production.</inlineHelpText>
    <label>Salesforce Naming Convention</label>
    <length>20</length>
    <type>Text</type>
</CustomField>