GearsetPOC/force-app/main/default/objects/ES_System__c/fields/SLA_in_place__c.field-meta.xml
<CustomField>
    <fullName>SLA_in_place__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA in place</label>
    <type>Checkbox</type>
</CustomField>