GearsetPOC/force-app/main/default/objects/ES_System__c/fields/Target_Recovery_Time__c.field-meta.xml
<CustomField>
    <fullName>Target_Recovery_Time__c</fullName>
    <inlineHelpText>The maximum time during which the system could be down</inlineHelpText>
    <label>Target Recovery Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>