GearsetPOC/force-app/main/default/objects/ES_System__c/fields/Target_Recovery_Time_Justification__c.field-meta.xml
<CustomField>
    <fullName>Target_Recovery_Time_Justification__c</fullName>
    <inlineHelpText>Please enter a justification explaining the rationale behind the Target Recovery Time</inlineHelpText>
    <label>Target Recovery Time Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>