GearsetPOC/force-app/main/default/objects/ES_System__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>* Critical = if the system is down, it will directly impact the train operations or the ticket sales
* Core = Core business system
* Standard = Other standard system</inlineHelpText>
    <label>Criticality for Revenue / Operations</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
                <default>true</default>
                <label>Critical</label>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>