GearsetPOC/force-app/main/default/objects/ES_System__c/recordTypes/Eurostar_Internal_System.recordType-meta.xml
<RecordType>
    <fullName>Eurostar_Internal_System</fullName>
    <active>true</active>
    <description>Developed on a specific platform, usually by a specific supplier</description>
    <label>Eurostar Internal System</label>
</RecordType>