GearsetPOC/force-app/main/default/objects/ES_System__c/recordTypes/Force_com_System.recordType-meta.xml
<RecordType>
    <fullName>Force_com_System</fullName>
    <active>true</active>
    <description>Developed on the Force.com (Salesforce) platform</description>
    <label>Force.com System</label>
</RecordType>