GearsetPOC/force-app/main/default/objects/ES_System__c/validationRules/If_Critical_Then_Recovery_Time_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Critical_Then_Recovery_Time_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Type__c, &quot;Critical&quot;) &amp;&amp; ISBLANK( Target_Recovery_Time__c)</errorConditionFormula>
    <errorDisplayField>Target_Recovery_Time__c</errorDisplayField>
    <errorMessage>As this system is critical, it is mandatory to enter a minimum recovery time target.</errorMessage>
</ValidationRule>