GearsetPOC/force-app/main/default/objects/ES_System__c/validationRules/If_Critical_Then_RTime_Justif_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Critical_Then_RTime_Justif_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Type__c, &quot;Critical&quot;) &amp;&amp; ISBLANK(Target_Recovery_Time_Justification__c)</errorConditionFormula>
    <errorDisplayField>Target_Recovery_Time_Justification__c</errorDisplayField>
    <errorMessage>As this system is critical, it is mandatory to enter a minimum recovery time target justification.</errorMessage>
</ValidationRule>