GearsetPOC/force-app/main/default/objects/ES_System__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>IS_Team_Responsible__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Description__c</columns>
    <columns>Number_of_Users__c</columns>
    <columns>Key_Users__c</columns>
    <columns>Owner_Job_Title__c</columns>
    <columns>Business_Lead__c</columns>
    <columns>Business_Lead_Job_Title__c</columns>
    <columns>Business_Areas__c</columns>
    <columns>SLA_in_place__c</columns>
    <columns>Support_Supplier__c</columns>
    <columns>Target_Recovery_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>